--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-plugin-router": "^5.0.6",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
